--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     target="_blank">www.linkedin.com/in/davidgodard/</a></p>
                         </li>
                         <li><img class="icone" src="img/icones/pdf.png" alt="pdf">
-                            <p><a href="CVgodard.pdf" download>Telecharger le CV</a></p>
+                            <p><a href="DAVIDGODARDCV.pdf" download>Telecharger le CV</a></p>
                         </li>
                     </ul>
                 </div>
@@ -66,6 +66,9 @@
                         </li>
                         <li><img class="icone" src="img/icones/js.png" alt="javascript">
                             <p>Javascript</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/python.png" alt="python">
+                            <p>Python (en cours)</p>
                         </li>
                     </ul>
                 </div>
@@ -104,6 +107,10 @@
                             <img src="img/icones/mysql.png" alt="my SQL" class="icone">
                             <p>MySQL</p>
                         </li>
+                        <li>
+                            <img src="img/icones/SQLite.png" alt="SQLite" class="icone">
+                            <p>SQLite</p>
+                        </li>
                     </ul>
                 </div>
                 <div class="bloc-competence" data-aos="fade-right" data-aos-delay="500">
@@ -132,32 +139,32 @@
                 <h3>Projets d'étude</h3>
                 <div class="projets bloc-competence">
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">Droneworks</h4>
+                        <h4 class="title-projet">Droneworks <br><small class="tech">Wordpress / DIVI</small></h4>
                         <a href="http://droneworks.mounlight.net/" target="_blank"> <img
                                 src="img/realisations/droneworks.png" alt=""></a>
                     </div>
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">Les enfants d'abords</h4>
+                        <h4 class="title-projet">Les enfants d'abords <br><small class="tech">PHP / MYSQL / API calendrier scolaire</small></h4>
                         <a href="http://lesenfantsdabord.mounlight.online/" target="_blank"><img
                                 src="img/realisations/calendrier.png" alt=""></a>
                     </div>
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">Le Wok-Up</h4>
+                        <h4 class="title-projet">Le Wok-Up <br><small class="tech">Javascript / Bootstrap</small></small></h4>
                         <a href="https://lhp9david.github.io/bootstrap/" target="_blank"><img
                                 src="img/realisations/wokup.png" alt=""></a>
                     </div>
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">ShiFuMi</h4>
+                        <h4 class="title-projet">ShiFuMi <br><small class="tech">Javasript</small></h4>
                         <a href="https://lhp9david.github.io/shiFuMi/" target="_blank"><img
                                 src="img/realisations/shifumi.png" alt=""></a>
                     </div>
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">Boutique</h4>
+                        <h4 class="title-projet">Boutique <br><small class="tech">Javascript / JSON</small></h4>
                         <a href="https://lhp9david.github.io/js-panier/" target="_blank"><img
                                 src="img/realisations/panier.png" alt=""></a>
                     </div>
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
-                        <h4 class="title-projet">Cinéma</h4>
+                        <h4 class="title-projet">Cinéma <br><small class="tech">Javascript / JSON</small></h4>
                         <a href="https://lhp9david.github.io/jsonCinema/" target="_blank"><img
                                 src="img/realisations/film.png" alt=""></a>
                     </div>
