--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <p>Javascript</p>
                         </li>
                         <li><img class="icone" src="img/icones/python.png" alt="python">
-                            <p>Python (en cours)</p>
+                            <p>Python</p>
                         </li>
                     </ul>
                 </div>
@@ -135,7 +135,108 @@
             </div>
         </aside>
         <div class="right-side">
-            
+            <div class="">
+                <h3>Expériences professionnelles</h3>
+                <div class=" bloc-competence">
+                    <div class="poste-date">
+                        <h4>FORENTECH, Analyste en investigation numérique légale <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
+                        <h5>NOVEMBRE 2023 - AUJOURD'HUI</h5>
+                    </div>
+                    <ul class="competence-ul">
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Extraction, copie et analyse de supports de données numériques</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Rédaction de rapports d'expertises judiciaires et privées</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Conception de scripts python pour l'analyse de base de données</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class=" bloc-competence">
+                    <div class="poste-date">
+                        <h4>SAVERGLASS, Sondeur Contrôleur Statistique <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
+                        <h5>FEVRIER 2015 - SEPTEMBRE 2022</h5>
+                    </div>
+                    <ul class="competence-ul">
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Contrôler la conformité d'une production</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Contrôler la conformité d'application de procédures qualité</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Identifier des non-conformités</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Déterminer des actions correctives</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Interpréter des données de contrôle</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Réaliser des contrôles de conformité</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>contrôler le fonctionnement des instruments de contrôle et mesure</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Actualiser des outils informatiques de suivi de la qualité</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Coordonner l'activité d'une équipe</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class=" bloc-competence">
+                    <div class="poste-date">
+                        <h4>ALTEAD, Agent de fabrication <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
+                        <h5>JUIN 2014 - SEPTEMBRE 2014</h5>
+                    </div>
+                    <ul class="competence-ul">
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Lecture de plan</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Contrôler la conformité d'application de procédures qualité</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Utiliser des outils de fabrication (cloueuse et agrapheuse pneumatique, scie(sabre,cloche), tronçonneuse, masse, serre-joint, mètre) </p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Port de charge lourde</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class=" bloc-competence">
+                    <div class="poste-date">
+                        <h4>BURBAN PALETTE, Trieur / réparateur <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
+                        <h5>MARS 2012 - AVRIL 2014</h5>
+                    </div>
+                    <ul class="competence-ul">
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Trier des palettes selon le type (dimension , poids ...)</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Contrôler l'état général des palettes</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Utiliser des outils de réparation (cloueuse et agrapheuse pneumatique, scie(sabre,cloche), tronçonneuse, masse, serre-joint, mètre) </p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Port de charge lourde</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Inventaire</p>
+                        </li>
+                        <li><img class="icone" src="img/icones/check.png" alt="">
+                            <p>Travail d'équipe</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
                 <h3>Projets d'étude</h3>
                 <div class="projets bloc-competence">
                     <div class="projet" data-aos="zoom-in"  data-aos-delay="500">
@@ -170,91 +271,6 @@
                     </div>
                 </div>
 
-                <div class="">
-                    <h3>Expériences professionnelles</h3>
-                    <div class=" bloc-competence">
-                        <div class="poste-date">
-                            <h4>SAVERGLASS, Sondeur Contrôleur Statistique <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
-                            <h5>FEVRIER 2015 - SEPTEMBRE 2022</h5>
-                        </div>
-                        <ul class="competence-ul">
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Contrôler la conformité d'une production</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Contrôler la conformité d'application de procédures qualité</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Identifier des non-conformités</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Déterminer des actions correctives</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Interpréter des données de contrôle</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Réaliser des contrôles de conformité</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>contrôler le fonctionnement des instruments de contrôle et mesure</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Actualiser des outils informatiques de suivi de la qualité</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Coordonner l'activité d'une équipe</p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class=" bloc-competence">
-                        <div class="poste-date">
-                            <h4>ALTEAD, Agent de fabrication <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
-                            <h5>JUIN 2014 - SEPTEMBRE 2014</h5>
-                        </div>
-                        <ul class="competence-ul">
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Lecture de plan</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Contrôler la conformité d'application de procédures qualité</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Utiliser des outils de fabrication (cloueuse et agrapheuse pneumatique, scie(sabre,cloche), tronçonneuse, masse, serre-joint, mètre) </p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Port de charge lourde</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class=" bloc-competence">
-                        <div class="poste-date">
-                            <h4>BURBAN PALETTE, Trieur / réparateur <img class="icone info-icone" src="img/icones/info.png" alt=""></h4>
-                            <h5>MARS 2012 - AVRIL 2014</h5>
-                        </div>
-                        <ul class="competence-ul">
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Trier des palettes selon le type (dimension , poids ...)</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Contrôler l'état général des palettes</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Utiliser des outils de réparation (cloueuse et agrapheuse pneumatique, scie(sabre,cloche), tronçonneuse, masse, serre-joint, mètre) </p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Port de charge lourde</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Inventaire</p>
-                            </li>
-                            <li><img class="icone" src="img/icones/check.png" alt="">
-                                <p>Travail d'équipe</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
                 <div class="formations">
                     <h3>Formation</h3>
                     <div class="formation bloc-competence">
