--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     target="_blank">www.linkedin.com/in/davidgodard/</a></p>
                         </li>
                         <li><img class="icone" src="img/icones/pdf.png" alt="pdf">
-                            <p><a href="DAVIDGODARDCV.pdf" download>Telecharger le CV</a></p>
+                            <p><a href="David godard.pdf" download>Telecharger le CV</a></p>
                         </li>
                     </ul>
                 </div>
